--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div> -->
       <div class="nav-right">
         <div class="developer">
-          <p>Web Developer</p> 
+          <span>Web Developer</span> 
       </div> 
       <!-- <section class="profile">
         <div class="profile-pic">
