--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
     <section class="second-row">
       
       <div class="box-66">
-          <h1>Content</h1>
+          <h1>Proficiencies</h1>
           <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonmummy nibh eusimod tincidunt ut laoreet dolore magna liquam erat volutpat.</p>
-          <h2>Sub Header</h2>
+          <h2>Libraries & Frameworks</h2>
           <p>Duis autem vel eum iriure dolor in dendererit in vulputate velit esse molestle consequat, vel illum dolore eu feugiat nulla facillsis at vero eros et accumsan et lusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolor te feugait nulla facillsi.  Nam liger tempor cum soluta nobis eleifend option congue nihil imperdiet domin id quod mazim placerat facer possim assum.</p>
           </div>
           
