--- a/index.html
+++ b/index.html
@@ -184,13 +184,13 @@
             
           </div>
           <div class="box-22 box-b">
-            <h3>Gallery Image</h3>
+            <!-- <h3>Gallery Image</h3> -->
           </div>
           <div class="box-22 box-c">
-            <h3>Gallery Image</h3>
+            <!-- <h3>Gallery Image</h3> -->
           </div>
           <div class="box-22 box-d">
-            <h3>Gallery Image</h3>
+            <!-- <h3>Gallery Image</h3> -->
           </div>
         </div>
         
