--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <main>
     <section class="top">
       <header>
-        <h2 class="first">Maria Jose</h2>
+        <h2 class="first">MariaJose</h2>
         <h2 class="last">Fiorda-Savill</h2>
       </header>
       <nav>
