--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="profile">
           <div class="profile-pic">
             <img
-              src="./assets/images/colorprofilepix.jpg"
+              src="assets/images/colorprofilepix.jpg"
               alt="josie-img"
               class="profile-img"
             />
@@ -137,20 +137,20 @@
         </div>
         <div class="nav-links">
           <a href="https://www.linkedin.com/in/josiefiordasavill"><img
-              src="./assets/images/linkedin.svg"
+              src="https://josiesavill.github.io//portfolio-2.0/assets/images/linkedin.svg"
               alt="linked in icon"
               class="linkedin-icon"
           /></a>
           <a href="https://github.com/JosieSavill?tab=repositories">
               <img
-              src="./assets/images/github.svg"
+              src="https://josiesavill.github.io//portfolio-2.0/assets/images/github.svg"
               alt="github icon"
               class="github-icon"
               />
           </a>
           <a className="gmail" href="mailto:FiordaSavillJosie@gmail.com"
               ><img
-                  src="./assets/images/envelope.svg"
+                  src="https://josiesavill.github.io//portfolio-2.0/assets/images/envelope.svg"
                   alt="email  icon"
                   class="mail-icon"
               /></a>
