added doc folder

--- a/index.html
+++ b/index.html
@@ -137,20 +137,20 @@
         </div>
         <div class="nav-links">
           <a href="https://www.linkedin.com/in/josiefiordasavill"><img
-              src="assets/images/linkedin.svg"
+              src="docs/assets/images/linkedin.svg"
               alt="linked in icon"
               class="linkedin-icon"
           /></a>
           <a href="https://github.com/JosieSavill?tab=repositories">
               <img
-              src="assets/images/github.svg"
+              src="docs/assets/images/github.svg"
               alt="github icon"
               class="github-icon"
               />
           </a>
           <a className="gmail" href="mailto:FiordaSavillJosie@gmail.com"
               ><img
-                  src="assets/images/envelope.svg"
+                  src="docs/assets/images/envelope.svg"
                   alt="email  icon"
                   class="mail-icon"
               /></a>
