updated img paths

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="profile">
           <div class="profile-pic">
             <img
-              src="assets/images/colorprofilepix.jpg"
+              src="./assets/images/colorprofilepix.jpg"
               alt="josie-img"
               class="profile-img"
             />
