--- a/index.html
+++ b/index.html
@@ -115,16 +115,16 @@
       <div class="bottom-row">
         <h2>Gallery</h2>
         <div class="gallery">
-          <div class="box-22 box-a">
+          <div class="box-22 box-a" data-title="pic1" data-bg="https://josiesavill.github.io//portfolio-2.0/assets/images/portfolio-desktop-view.png">
             <!-- <h3>Gallery Image</h3> -->
           </div>
-          <div class="box-22 box-b">
+          <div class="box-22 box-b" data-bg="https://josiesavill.github.io//portfolio-2.0/assets/images/portfolio-desktop-view.png">
             <!-- <h3>Gallery Image</h3> -->
           </div>
-          <div class="box-22 box-c">
+          <div class="box-22 box-c" data-bg="https://josiesavill.github.io//portfolio-2.0/assets/images/portfolio-desktop-view.png">
             <!-- <h3>Gallery Image</h3> -->
           </div>
-          <div class="box-22 box-d">
+          <div class="box-22 box-d" data-bg="https://josiesavill.github.io//portfolio-2.0/assets/images/portfolio-desktop-view.png">
             <!-- <h3>Gallery Image</h3> -->
           </div>
         </div>
@@ -162,12 +162,32 @@
 
 
 
-
   </main>
-  
+
+
+
+
+
+<!-- Modal -->
+<div class="modal fade " id="thumbnailModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel"></h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <img src=""/>
+      </div>
+     
+    </div>
+  </div>
+</div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-
+  <script src="./script.js"></script>
 
   
 </body>
