--- a/index.html
+++ b/index.html
@@ -166,6 +166,9 @@
                   class="mail-icon"
               /></a>
         </div>
+        <div>
+          <img class="bird" src="https://josiesavill.github.io//portfolio-2.0/assets/images/fire-bird.png" alt="phoenix image">
+        </div>
         <div class="right-footer">
             <p> <strong>Updated:</strong> February, 2025</p>
         </div>
